# special

./: .gitignore  .jjignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PATTERNS.md  README.md  build.rs  kimura.toml  special.toml
.github/workflows/: release.yml
codex-plugin/special/: .mcp.json
docs/: agents.md  annotations.md  architecture.md  commands.md  concepts.md  configuration.md  docs.md  health.md  how-to.md  install.md  patternizing.md  patterns.md  quickstart.md  release.md  specs.md  tutorial.md
docs/contributor/: cache.md  index.md  language-packs.md  parser.md  patterns.md  quality.md  release.md  rendering.md  traceability.md
docs/src/: README.md  agents.md  annotations.md  commands.md  configuration.md  docs-architecture.md  install.md  release.md  tutorial.md
lean/: ScopedHealth.lean
lean/ScopedHealth/: KernelCli.lean  ProjectedKernel.lean
scripts/: release_review_context.py  release_review_contract.py  release_review_invoke.py  release_review_pipeline.py  release_review_planning.py  release_review_swarm.py  review-rust-release-style.py  tag-release.py  update-homebrew-formula.py  verify-github-release-published.sh  verify-homebrew-formula.sh  verify-lean-traceability-kernel.py  verify-skill-templates.py
specs/: root.md
src/: annotation_syntax.rs  cache.rs  cli.rs  config.rs  diff.rs  docs.rs  extractor.rs  index.rs  lib.rs  model.rs  modules.rs  parser.rs  patterns.rs  planned_syntax.rs  render.rs  skills.rs  source_paths.rs  syntax.rs  test_support.rs  trace.rs
src/cache/: fingerprint.rs  lock.rs  stats.rs  storage.rs
src/cli/: common.rs  diff.rs  docs.rs  init.rs  mcp.rs  patterns.rs  repo.rs  spec.rs  status.rs  trace.rs
src/config/: discovery.rs  (+3 more)
tests/: cli_config_lint.rs  cli_diff.rs  cli_discovery.rs  cli_docs.rs  cli_init.rs  cli_mcp.rs  cli_modules.rs  cli_overview.rs  cli_patterns.rs  cli_repo.rs  cli_skills.rs  cli_spec.rs  cli_trace.rs  distribution.rs  docs_self_check.rs  quality_release_review.rs  quality_tag_release.rs  scoped_health_proof_boundary.rs
(+284 files in other folders)
