[package]
name = "special-cli"
version = "0.7.1"
edition = "2024"
repository = "https://github.com/LabLeaks/special"

[lib]
name = "special"

[[bin]]
name = "special"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
askama = "0.12"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy", "html"] }
tree-sitter = "0.26.8"
tree-sitter-go = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
toml = "0.8"
url = "2.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
